<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textViewCreateNewQuestion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="0dp"
        android:layout_marginTop="0dp"
        android:background="#5A595B"
        android:paddingBottom="6dp"
        android:paddingTop="6dp"
        android:text="Create New Question"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintDimensionRatio="w,1:1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewQuestionName"
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:text="Name:"
        android:textAlignment="textStart"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewCreateNewQuestion" />

    <EditText
        android:id="@+id/editTextQuestionName"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:maxLength="20"
        android:singleLine="true"
        app:layout_constraintLeft_toRightOf="@+id/textViewQuestionName"
        app:layout_constraintRight_toRightOf="@+id/textViewCreateNewQuestion"
        app:layout_constraintTop_toBottomOf="@+id/textViewCreateNewQuestion" />

    <GridLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="7dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:columnCount="2"
        app:layout_constraintBottom_toTopOf="@+id/buttonSaveQuestion"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/editTextQuestionName">

        <TextView
            android:id="@+id/textViewQuestion"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:gravity="center"
            android:text="Question:"
            android:textAlignment="textStart"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editTextQuestion"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:ems="10"
            android:inputType="textMultiLine"
            android:maxHeight="35dp"
            android:scrollbars="vertical" />

        <TextView
            android:id="@+id/textViewAnswer"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:gravity="center"
            android:text="Answer:"
            android:textAlignment="textStart"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editTextAnswer"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:ems="10"
            android:inputType="textMultiLine"
            android:maxHeight="35dp"
            android:scrollbars="vertical" />
    </GridLayout>

    <Button
        android:id="@+id/buttonSaveQuestion"
        android:layout_width="0dp"
        android:layout_height="55dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:text="Save Question"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

</android.support.constraint.ConstraintLayout>